--- a/.github/workflows/agent_reviewer.yml
+++ b/.github/workflows/agent_reviewer.yml
@@ -1,4 +1,4 @@
-name: PR Agent (Gemini)
+name: PR Agent
 on:
   pull_request:
     types: [opened, reopened, ready_for_review]
@@ -15,8 +15,5 @@ jobs:
       - name: PR Agent action step
         uses: qodo-ai/pr-agent@main
         env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN_GITHUB }}
           OPENAI_KEY: ${{ secrets.GEMINI_API_KEY }}
-          github_action_config.auto_review: "true"
-          github_action_config.auto_describe: "true"
-          github_action_config.auto_improve: "true"
+          GITHUB_TOKEN: ${{ secrets.TOKEN_GITHUB }}
