--- a/.github/workflows/agent_reviewer.yml
+++ b/.github/workflows/agent_reviewer.yml
@@ -23,30 +23,24 @@ jobs:
           github_action_config.auto_describe: "true"
           github_action_config.auto_improve: "true"
 
-    PR_REVIEWER__EXTRA_INSTRUCTIONS: |
-            Act as a senior reviewer. Prioritize:
-            - Security issues (injection, unsafe eval, secrets, SSRF, XSS, CORS).
-            - Logic bugs and concurrency/data-race risks.
-            - Backwards compatibility and API surface changes.
-            - Tests: point out missing/weak coverage and suggest specific test cases.
-            - Performance hotspots; flag N+1 queries and unnecessary allocations.
-            In Angular projects (v19), verify standalone components, signals,
-            control flow syntax, and strict type safety. Suggest minimal diffs.
+          github_action_config.review_instructions: |
+            - Ensure all Python functions include type hints for parameters and return types.
+            - Check for adherence to PEP 8 style guidelines.
+            - Flag any hardcoded credentials or sensitive information (e.g., API keys, passwords).
+            - Suggest improvements for code readability, such as breaking down complex functions.
+            - Provide a summary of the PR's impact on the codebase.
+            - Enforce the DRY principle by identifying and flagging repeated code patterns that can be refactored into functions or modules.
+            - Ensure adherence to OOP principles, such as proper use of classes, encapsulation, inheritance, and polymorphism where applicable.
+          github_action_config.description_instructions: |
+            - Generate a concise summary of the changes, including the purpose of the PR.
+            - List any dependencies or prerequisites (e.g., required libraries or environment setup).
+            - Highlight potential risks or areas needing further testing.
+          github_action_config.improve_instructions: |
+            - Suggest adding type hints to Python functions missing them.
+            - Recommend refactoring functions longer than 50 lines into smaller, modular functions.
+            - Propose adding unit tests for new or modified functionality.
+            - Suggest optimizations for performance-critical code paths.
+            - Propose refactoring repeated code to adhere to the DRY principle, such as extracting common logic into reusable functions or classes.
+            - Recommend restructuring code to follow OOP principles, including better use of classes, proper encapsulation, and leveraging inheritance or polymorphism where appropriate.
 
-          # Improve tool prompt
-    PR_CODE_SUGGESTIONS__EXTRA_INSTRUCTIONS: |
-            Provide concrete, minimal diffs only. Prefer idiomatic Angular 19
-            patterns, RxJS best practices, accessibility (ARIA), and i18n safety.
-            Avoid style nitpicks unless they reduce complexity or defects.
-
-          # Describe tool prompt
-  PR_DESCRIPTION__EXTRA_INSTRUCTIONS: |
-            Produce a crisp PR title; then a summary with bullet points:
-            - What changed + why
-            - Risk level + rollback plan
-            - Affected modules/routes
-            - Manual test steps
-            Add labels only if clearly relevant.
-
-          # (Optional) make review output compact
           PR_REVIEWER__PERSISTENT_COMMENT: "true"
