--- a/.github/workflows/agent_reviewer.yml
+++ b/.github/workflows/agent_reviewer.yml
@@ -19,6 +19,6 @@ jobs:
           config.model: "gemini/gemini-1.5-flash"
           config.fallback_models: '["gemini/gemini-1.5-flash"]'
           GOOGLE_AI_STUDIO.GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
-          github_action_config.auto_review: "true"
-          github_action_config.auto_describe: "true"
+          # github_action_config.auto_review: "true"
+          # github_action_config.auto_describe: "true"
           github_action_config.auto_improve: "true"
